# classy_xml

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/classy_xml/: __init__.py  classy_xml.py
src/classy_xml/examples/: countries.xml  countries_gen.py  countries_mod.py  countries_parser.py  example.py  example.xml
tests/: test.xml  test_classy_xml.py
