[metadata]
name = classyxml
version = 0.0.5
author = Keaton Scheible
author_email = thatdspguy@gmail.com
description = An xml file parser that makes the element text and attributes of an xml file accessible as ClassyXml class attributes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thatdspguy/classy_xml
project_urls =
    Bug Tracker = https://github.com/thatdspguy/classy_xml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
